tests/snapshots/cli_help__help_actions.snap
---
source: tests/cli_help.rs
expression: stdout
---
Usage: fj actions [OPTIONS] <COMMAND>

Commands:
  tasks      List the tasks on a repo
  variables  List and manage variables
  secrets    
  dispatch   Dispatch a workflow
  help       Print this message or the help of the given subcommand(s)

Options:
  -H, --host <HOST>      
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -r, --repo <REPO>      The repo to operate on
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
