tests/snapshots/cli_help__help_actions_artifact.snap
---
source: tests/cli_help.rs
assertion_line: 48
expression: stdout
---
List and manage workflow run artifacts

Usage: fj actions artifact [OPTIONS] <COMMAND>

Commands:
  list      List artifacts
  download  Download an artifact's ZIP archive
  delete    Delete an artifact
  help      Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>  Directory containing fj configuration and credentials [env: FORGEJO_CONFIG=]
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -H, --host <HOST>      Forgejo instance host or URL to use instead of auto-detection [env: FORGEJO_HOST]
  -r, --repo <REPO>      The repo to operate on
      --token <TOKEN>    Forgejo API token to use instead of stored credentials [env: FORGEJO_TOKEN]
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
