tests/snapshots/cli_help__help_actions_run.snap
---
source: tests/cli_help.rs
expression: stdout
---
List and manage workflow runs

Usage: fj actions run [OPTIONS] <COMMAND>

Commands:
  list    List workflow runs
  view    View a workflow run
  jobs    List the jobs of a workflow run
  logs    Print the logs of a workflow run
  cancel  Cancel a pending or running workflow run
  delete  Delete a completed workflow run
  help    Print this message or the help of the given subcommand(s)

Options:
  -H, --host <HOST>      
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -r, --repo <REPO>      The repo to operate on
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
