tests/snapshots/cli_help__help_auth.snap
---
source: tests/cli_help.rs
expression: stdout
---
Usage: fj auth [OPTIONS] <COMMAND>

Commands:
  login    Log in to an instance
  logout   Deletes login info for an instance
  add-key  Add an application token for an instance
  use-ssh  
  list     List all instances you're currently logged into
  help     Print this message or the help of the given subcommand(s)

Options:
  -y, --yes      Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose  Show verbose output (API calls, resolution steps)
  -h, --help     Print help
