tests/snapshots/cli_help__help_issue.snap
---
source: tests/cli_help.rs
assertion_line: 36
expression: stdout
---
Usage: fj issue [OPTIONS] <COMMAND>

Commands:
  create     Create a new issue on a repo
  edit       Edit an issue
  comment    Add a comment on an issue
  close      Close an issue
  reopen     Reopen a closed issue
  assign     Assign users to an issue
  unassign   Unassign users from an issue
  search     Search for an issue in a repo
  view       View an issue's info
  templates  List the issue templates in a repo
  browse     Open an issue in your browser
  help       Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>  Directory containing fj configuration and credentials [env: FORGEJO_CONFIG=]
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -H, --host <HOST>      Forgejo instance host or URL to use instead of auto-detection [env: FORGEJO_HOST]
      --token <TOKEN>    Forgejo API token to use instead of stored credentials [env: FORGEJO_TOKEN]
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
