tests/snapshots/cli_help__help_org.snap
---
source: tests/cli_help.rs
expression: stdout
---
Usage: fj org [OPTIONS] <COMMAND>

Commands:
  list        List all organizations
  view        View info about an organization
  create      Create a new organization
  edit        Edit an organization's information
  activity    View the activity in an organization
  members     List the members of an organization
  visibility  View and change the visibility of your membership in an organization
  team        
  label       
  repo        
  help        Print this message or the help of the given subcommand(s)

Options:
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
