tests/snapshots/cli_help__help_pr.snap
---
source: tests/cli_help.rs
expression: stdout
---
Usage: fj pr [OPTIONS] <COMMAND>

Commands:
  search    Search a repository's pull requests
  create    Create a new pull request
  view      View the contents of a pull request
  status    View the mergability and CI status of a pull request
  checkout  Checkout a pull request in a new branch
  comment   Add a comment on a pull request
  edit      Edit the contents of a pull request
  close     Close a pull request, without merging
  reopen    Reopen a closed pull request
  merge     Merge a pull request
  browse    Open a pull request in your browser
  review    View the review on a pull request
  help      Print this message or the help of the given subcommand(s)

Options:
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
