tests/snapshots/cli_help__help_release.snap
---
source: tests/cli_help.rs
expression: stdout
---
Usage: fj release [OPTIONS] <COMMAND>

Commands:
  create  Create a new release
  edit    Edit a release's info
  delete  Delete a release
  list    List all the releases on a repo
  view    View a release's info
  browse  Open a release in your browser
  asset   Commands on a release's attached files
  help    Print this message or the help of the given subcommand(s)

Options:
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -r, --repo <REPO>      The name of the repository to operate on
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
