tests/snapshots/cli_help__help_tag.snap
---
source: tests/cli_help.rs
assertion_line: 36
expression: stdout
---
Usage: fj tag [OPTIONS] <COMMAND>

Commands:
  create  Create a new tag
  delete  Delete a tag
  list    List all the tags on a repo
  view    View a tag's info
  help    Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>  Directory containing fj configuration and credentials [env: FORGEJO_CONFIG=]
  -R, --remote <REMOTE>  The local git remote that points to the repo to operate on
  -H, --host <HOST>      Forgejo instance host or URL to use instead of auto-detection [env: FORGEJO_HOST]
  -r, --repo <REPO>      The name of the repository to operate on
      --token <TOKEN>    Forgejo API token to use instead of stored credentials [env: FORGEJO_TOKEN]
  -y, --yes              Skip all confirmation prompts (auto-confirm destructive actions)
  -v, --verbose          Show verbose output (API calls, resolution steps)
  -h, --help             Print help
